tests/neg/recursive-type2.stk
type A = A

def f(n: Int): A = n // error

def g(a: A): Int = a // error
